module-deploy/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: digitransit
    project: sw
  name: digitransit
  namespace: sw-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digitransit
      project: sw
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: digitransit
        project: sw
    spec:
      volumes:
        - name: config
          configMap:
            name: digitransit-config
      tolerations:
        - key: eks.amazonaws.com/compute-type
          value: fargate
          operator: Equal
          effect: NoSchedule
      containers:
        - image: 313329311652.dkr.ecr.eu-central-1.amazonaws.com/hbt/digitransit-ui
          name: digitransit-ui
          volumeMounts:
            - mountPath: /opt/digitransit-ui/app/configurations/config.sw.js
              name: config
              subPath: config.sw.js  
          resources:
            requests:
              cpu: 500m
              memory: 4Gi
          ports:
            - containerPort: 8080
              name: http
