module-deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digitransit
spec:
  type: NodePort
  selector:
    app: digitransit
    project: sw
  ports:
    - name: http
      protocol: TCP
      port: 8080
